PostgresParser.py
# Generated from Postgres.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO


class PostgresParser ( Parser ):

    grammarFileName = "Postgres.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "','", "')'", "'*'", "'='", "'!='", 
                     "'>'", "'<'", "'>='", "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CREATE", "TABLE", 
                      "SELECT", "FROM", "WHERE", "AND", "OR", "INSERT", 
                      "INTO", "VALUES", "CONSTRAINT", "PRIMARY", "KEY", 
                      "UNIQUE", "NOT", "NULL", "INT", "INTEGER", "SMALLINT", 
                      "BIGINT", "REAL", "DOUBLE", "TEXT", "CHAR", "VARCHAR", 
                      "NUMERIC", "DECIMAL", "DATE", "TIME", "TIMESTAMP", 
                      "BOOLEAN", "SERIAL", "IDENTIFIER", "NUMERIC_LITERAL", 
                      "STRING_LITERAL", "BOOLEAN_LITERAL", "DATE_LITERAL", 
                      "SEMI", "LINE_COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_prog = 0
    RULE_statement = 1
    RULE_create_stmt = 2
    RULE_select_stmt = 3
    RULE_select_columns = 4
    RULE_where_clause = 5
    RULE_condition = 6
    RULE_expression = 7
    RULE_insert_stmt = 8
    RULE_insert_columns_and_values = 9
    RULE_insert_columns = 10
    RULE_insert_values = 11
    RULE_value_list = 12
    RULE_table_name = 13
    RULE_column_definition_list = 14
    RULE_column_definition = 15
    RULE_column_name = 16
    RULE_data_type = 17
    RULE_basic_type = 18
    RULE_character_string_type = 19
    RULE_numeric_type = 20
    RULE_date_time_type = 21
    RULE_boolean_type = 22
    RULE_serial_type = 23
    RULE_column_constraint = 24
    RULE_table_constraint = 25
    RULE_primary_key_constraint = 26
    RULE_unique_constraint = 27
    RULE_column_name_list = 28
    RULE_value = 29
    RULE_literal = 30

    ruleNames =  [ "prog", "statement", "create_stmt", "select_stmt", "select_columns", 
                   "where_clause", "condition", "expression", "insert_stmt", 
                   "insert_columns_and_values", "insert_columns", "insert_values", 
                   "value_list", "table_name", "column_definition_list", 
                   "column_definition", "column_name", "data_type", "basic_type", 
                   "character_string_type", "numeric_type", "date_time_type", 
                   "boolean_type", "serial_type", "column_constraint", "table_constraint", 
                   "primary_key_constraint", "unique_constraint", "column_name_list", 
                   "value", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    CREATE=11
    TABLE=12
    SELECT=13
    FROM=14
    WHERE=15
    AND=16
    OR=17
    INSERT=18
    INTO=19
    VALUES=20
    CONSTRAINT=21
    PRIMARY=22
    KEY=23
    UNIQUE=24
    NOT=25
    NULL=26
    INT=27
    INTEGER=28
    SMALLINT=29
    BIGINT=30
    REAL=31
    DOUBLE=32
    TEXT=33
    CHAR=34
    VARCHAR=35
    NUMERIC=36
    DECIMAL=37
    DATE=38
    TIME=39
    TIMESTAMP=40
    BOOLEAN=41
    SERIAL=42
    IDENTIFIER=43
    NUMERIC_LITERAL=44
    STRING_LITERAL=45
    BOOLEAN_LITERAL=46
    DATE_LITERAL=47
    SEMI=48
    LINE_COMMENT=49
    BLOCK_COMMENT=50
    WS=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PostgresParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PostgresParser.StatementContext)
            else:
                return self.getTypedRuleContext(PostgresParser.StatementContext,i)


        def getRuleIndex(self):
            return PostgresParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PostgresParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 272384) != 0):
                self.state = 62
                self.statement()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(PostgresParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def create_stmt(self):
            return self.getTypedRuleContext(PostgresParser.Create_stmtContext,0)


        def SEMI(self):
            return self.getToken(PostgresParser.SEMI, 0)

        def insert_stmt(self):
            return self.getTypedRuleContext(PostgresParser.Insert_stmtContext,0)


        def select_stmt(self):
            return self.getTypedRuleContext(PostgresParser.Select_stmtContext,0)


        def getRuleIndex(self):
            return PostgresParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PostgresParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.create_stmt()
                self.state = 71
                self.match(PostgresParser.SEMI)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.insert_stmt()
                self.state = 74
                self.match(PostgresParser.SEMI)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 76
                self.select_stmt()
                self.state = 77
                self.match(PostgresParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Create_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(PostgresParser.CREATE, 0)

        def TABLE(self):
            return self.getToken(PostgresParser.TABLE, 0)

        def table_name(self):
            return self.getTypedRuleContext(PostgresParser.Table_nameContext,0)


        def column_definition_list(self):
            return self.getTypedRuleContext(PostgresParser.Column_definition_listContext,0)


        def table_constraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PostgresParser.Table_constraintContext)
            else:
                return self.getTypedRuleContext(PostgresParser.Table_constraintContext,i)


        def getRuleIndex(self):
            return PostgresParser.RULE_create_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate_stmt" ):
                listener.enterCreate_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate_stmt" ):
                listener.exitCreate_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreate_stmt" ):
                return visitor.visitCreate_stmt(self)
            else:
                return visitor.visitChildren(self)




    def create_stmt(self):

        localctx = PostgresParser.Create_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_create_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(PostgresParser.CREATE)
            self.state = 82
            self.match(PostgresParser.TABLE)
            self.state = 83
            self.table_name()
            self.state = 84
            self.match(PostgresParser.T__0)
            self.state = 85
            self.column_definition_list()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 86
                self.match(PostgresParser.T__1)
                self.state = 87
                self.table_constraint()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(PostgresParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(PostgresParser.SELECT, 0)

        def select_columns(self):
            return self.getTypedRuleContext(PostgresParser.Select_columnsContext,0)


        def FROM(self):
            return self.getToken(PostgresParser.FROM, 0)

        def table_name(self):
            return self.getTypedRuleContext(PostgresParser.Table_nameContext,0)


        def where_clause(self):
            return self.getTypedRuleContext(PostgresParser.Where_clauseContext,0)


        def getRuleIndex(self):
            return PostgresParser.RULE_select_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_stmt" ):
                listener.enterSelect_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_stmt" ):
                listener.exitSelect_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_stmt" ):
                return visitor.visitSelect_stmt(self)
            else:
                return visitor.visitChildren(self)




    def select_stmt(self):

        localctx = PostgresParser.Select_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_select_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(PostgresParser.SELECT)
            self.state = 96
            self.select_columns()
            self.state = 97
            self.match(PostgresParser.FROM)
            self.state = 98
            self.table_name()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 99
                self.where_clause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_columnsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column_name_list(self):
            return self.getTypedRuleContext(PostgresParser.Column_name_listContext,0)


        def getRuleIndex(self):
            return PostgresParser.RULE_select_columns

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_columns" ):
                listener.enterSelect_columns(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_columns" ):
                listener.exitSelect_columns(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_columns" ):
                return visitor.visitSelect_columns(self)
            else:
                return visitor.visitChildren(self)




    def select_columns(self):

        localctx = PostgresParser.Select_columnsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_select_columns)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(PostgresParser.T__3)
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.column_name_list()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Where_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(PostgresParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(PostgresParser.ConditionContext,0)


        def getRuleIndex(self):
            return PostgresParser.RULE_where_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhere_clause" ):
                listener.enterWhere_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhere_clause" ):
                listener.exitWhere_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhere_clause" ):
                return visitor.visitWhere_clause(self)
            else:
                return visitor.visitChildren(self)




    def where_clause(self):

        localctx = PostgresParser.Where_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_where_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(PostgresParser.WHERE)
            self.state = 107
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PostgresParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PostgresParser.ExpressionContext,i)


        def AND(self):
            return self.getToken(PostgresParser.AND, 0)

        def OR(self):
            return self.getToken(PostgresParser.OR, 0)

        def getRuleIndex(self):
            return PostgresParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = PostgresParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.expression()
                self.state = 110
                _la = self._input.LA(1)
                if not(_la==16 or _la==17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 111
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column_name(self):
            return self.getTypedRuleContext(PostgresParser.Column_nameContext,0)


        def value(self):
            return self.getTypedRuleContext(PostgresParser.ValueContext,0)


        def getRuleIndex(self):
            return PostgresParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = PostgresParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expression)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.column_name()
                self.state = 117
                self.match(PostgresParser.T__4)
                self.state = 118
                self.value()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.column_name()
                self.state = 121
                self.match(PostgresParser.T__5)
                self.state = 122
                self.value()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.column_name()
                self.state = 125
                self.match(PostgresParser.T__6)
                self.state = 126
                self.value()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.column_name()
                self.state = 129
                self.match(PostgresParser.T__7)
                self.state = 130
                self.value()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 132
                self.column_name()
                self.state = 133
                self.match(PostgresParser.T__8)
                self.state = 134
                self.value()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 136
                self.column_name()
                self.state = 137
                self.match(PostgresParser.T__9)
                self.state = 138
                self.value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Insert_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(PostgresParser.INSERT, 0)

        def INTO(self):
            return self.getToken(PostgresParser.INTO, 0)

        def table_name(self):
            return self.getTypedRuleContext(PostgresParser.Table_nameContext,0)


        def insert_columns_and_values(self):
            return self.getTypedRuleContext(PostgresParser.Insert_columns_and_valuesContext,0)


        def getRuleIndex(self):
            return PostgresParser.RULE_insert_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsert_stmt" ):
                listener.enterInsert_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsert_stmt" ):
                listener.exitInsert_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsert_stmt" ):
                return visitor.visitInsert_stmt(self)
            else:
                return visitor.visitChildren(self)




    def insert_stmt(self):

        localctx = PostgresParser.Insert_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_insert_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(PostgresParser.INSERT)
            self.state = 143
            self.match(PostgresParser.INTO)
            self.state = 144
            self.table_name()
            self.state = 145
            self.insert_columns_and_values()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Insert_columns_and_valuesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def insert_columns(self):
            return self.getTypedRuleContext(PostgresParser.Insert_columnsContext,0)


        def VALUES(self):
            return self.getToken(PostgresParser.VALUES, 0)

        def insert_values(self):
            return self.getTypedRuleContext(PostgresParser.Insert_valuesContext,0)


        def getRuleIndex(self):
            return PostgresParser.RULE_insert_columns_and_values

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsert_columns_and_values" ):
                listener.enterInsert_columns_and_values(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsert_columns_and_values" ):
                listener.exitInsert_columns_and_values(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsert_columns_and_values" ):
                return visitor.visitInsert_columns_and_values(self)
            else:
                return visitor.visitChildren(self)




    def insert_columns_and_values(self):

        localctx = PostgresParser.Insert_columns_and_valuesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_insert_columns_and_values)
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.insert_columns()
                self.state = 148
                self.match(PostgresParser.VALUES)
                self.state = 149
                self.insert_values()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(PostgresParser.VALUES)
                self.state = 152
                self.insert_values()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Insert_columnsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column_name_list(self):
            return self.getTypedRuleContext(PostgresParser.Column_name_listContext,0)


        def getRuleIndex(self):
            return PostgresParser.RULE_insert_columns

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsert_columns" ):
                listener.enterInsert_columns(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsert_columns" ):
                listener.exitInsert_columns(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsert_columns" ):
                return visitor.visitInsert_columns(self)
            else:
                return visitor.visitChildren(self)




    def insert_columns(self):

        localctx = PostgresParser.Insert_columnsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_insert_columns)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(PostgresParser.T__0)
            self.state = 156
            self.column_name_list()
            self.state = 157
            self.match(PostgresParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Insert_valuesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PostgresParser.Value_listContext)
            else:
                return self.getTypedRuleContext(PostgresParser.Value_listContext,i)


        def getRuleIndex(self):
            return PostgresParser.RULE_insert_values

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsert_values" ):
                listener.enterInsert_values(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsert_values" ):
                listener.exitInsert_values(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsert_values" ):
                return visitor.visitInsert_values(self)
            else:
                return visitor.visitChildren(self)




    def insert_values(self):

        localctx = PostgresParser.Insert_valuesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_insert_values)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(PostgresParser.T__0)
            self.state = 160
            self.value_list()
            self.state = 161
            self.match(PostgresParser.T__2)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 162
                self.match(PostgresParser.T__1)
                self.state = 163
                self.match(PostgresParser.T__0)
                self.state = 164
                self.value_list()
                self.state = 165
                self.match(PostgresParser.T__2)
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Value_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PostgresParser.ValueContext)
            else:
                return self.getTypedRuleContext(PostgresParser.ValueContext,i)


        def getRuleIndex(self):
            return PostgresParser.RULE_value_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue_list" ):
                listener.enterValue_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue_list" ):
                listener.exitValue_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue_list" ):
                return visitor.visitValue_list(self)
            else:
                return visitor.visitChildren(self)




    def value_list(self):

        localctx = PostgresParser.Value_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_value_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.value()
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
